# old-cavern

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  Profile(2023-02-28.08-12-50).opt  README.md
client/: Cargo.toml
client/src/: config.rs  input.rs  lib.rs  types.rs
client/src/interface/: mod.rs
client/src/mesher/: chunk.rs  mod.rs  quad.rs
client/src/network/: mod.rs
client/src/sound/: mod.rs
client/src/window/: camera.rs  mod.rs  texture.rs
client/src/window/surface/: mod.rs  uniforms.rs  vertex.rs
client/src/world/: mod.rs  player.rs
client_macros/: Cargo.toml
example/: Cargo.toml  shader.wgsl  skybox_shader.wgsl  world_shader.wgsl
example/addons/example/blocks/: dirt.lua  grass.lua  stone.lua  template.lua
example/addons/example/items/: dirt.lua  grass.lua  stone.lua  template.lua
example/addons/example/models/: cube.toml
example/addons/example/models/blocks/: cube,json
example/addons/example/models/items/: block,json
example/addons/example/translations/: en-us.toml
example/src/: main.rs  registry.rs
server/: Cargo.toml
server/src/: config.rs  lib.rs  network.rs
server_macros/: Cargo.toml
shared/: Cargo.toml
shared/src/: addons.rs  broadcast.rs  direction.rs  lib.rs  model.rs  packet.rs  registry.rs  resources.rs  util.rs
shared/src/packets/: example_packet.rs  mod.rs
shared/src/registry/: mod.rs  types.rs
shared/src/types/: block.rs  item.rs  mod.rs
