[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "../client" }
server = { path = "../server" }
shared = { path = "../shared" }

simple_logger = "4.0"
profiling = "1.0"
optick = "1.3"

[features]
profile = ["profiling/profile-with-optick"]